# GradientspaceDemo

./: .gitignore  .gitmodules  Agents.md  CMakeLists.txt  CMakePresets.json  README.md
VS2022/: GradientspaceDemo.sln  GradientspaceDemo.vcxproj  GradientspaceDemo.vcxproj.filters
cmake/: .gitignore  CMakeLists.txt
demo_source/: GradientspaceDemo.cpp
test_files/: .gitignore  download_test_files.bat
